# ai_finance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
app/finance_agent/: configuration.py  graph.py  tools.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/data_ingestion/: csv_analyzer.py  csv_loader.py  csv_tests.py
backend/app/data_ingestion/mock/: sample_data.csv
backend/app/finance_agent/: __init__.py  configuration.py  prompts.py  state.py  tools.py  utils.py
docs/: Development.md
